Extend latest sensor snapshots
